tests/baselines/reference/clodulesDerivedClasses.errors.txt
tests/cases/compiler/clodulesDerivedClasses.ts(9,7): error TS2417: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape'.
  Types of property 'Utils' are incompatible.
    Type 'typeof Path.Utils' is not assignable to type 'typeof Shape.Utils'.
      Property 'convert' is missing in type 'typeof Utils'.


==== tests/cases/compiler/clodulesDerivedClasses.ts (1 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! error TS2417: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape'.
!!! error TS2417:   Types of property 'Utils' are incompatible.
!!! error TS2417:     Type 'typeof Path.Utils' is not assignable to type 'typeof Shape.Utils'.
!!! error TS2417:       Property 'convert' is missing in type 'typeof Utils'.
        name: string;
    
    }
    
    module Path.Utils {
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    